# rapid_applications

arm_positioning_experiment/src/: positioning_main.cpp
object_search/: CMakeLists.txt  README.md  package.xml
object_search/include/object_search/: capture_roi.h  estimators.h  object_search.h
object_search/src/: capture_roi.cpp  cloud_database.cpp  commands.cpp  object_search.cpp  object_search_main.cpp  object_search_node.cpp
static_cloud_db/: CMakeLists.txt  package.xml
static_cloud_db/src/static_cloud_db/: static_cloud_db.py
static_cloud_db_msgs/: CMakeLists.txt  package.xml
