<?xml version="1.0"?>
<package>
  <name>static_cloud_db</name>
  <version>0.0.0</version>
  <description>The static_cloud_db package</description>
  <maintainer email="jstn@cs.washington.edu">Justin Huang</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mongo_msg_db</build_depend>
  <build_depend>mongo_msg_db_msgs</build_depend>
  <build_depend>rapid_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rospy_message_converter</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>static_cloud_db_msgs</build_depend>
  <run_depend>mongo_msg_db</run_depend>
  <run_depend>mongo_msg_db_msgs</run_depend>
  <run_depend>rapid_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rospy_message_converter</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>static_cloud_db_msgs</run_depend>

  <export>
  </export>
</package>
