<?xml version="1.0"?>
<package format="2">
  <name>static_cloud_db_msgs</name>
  <version>0.0.0</version>
  <description>The static_cloud_db_msgs package</description>
  <maintainer email="jstn@cs.washington.edu">Justin Huang</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>mongo_msg_db_msgs</depend>
  <depend>rapid_msgs</depend>

  <export>
  </export>
</package>
